--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html {
     color: #777;
   }
   
-  .bgimg-1, .bgimg-2, .bgimg-3 {
+  .bgimg-1 {
     position: relative;
     opacity: 0.65;
     background-position: center;
@@ -24,10 +24,11 @@ body, html {
     top: 50%;
     width: 100%;
     text-align: center;
+    color: rgb(218, 35, 35);
   }
   
   .caption span.border {
-    color: rgb(218, 35, 35);
+    background-color: rgb(218, 35, 35);
     padding: 18px;
     font-size: 50px;
     letter-spacing: 5px;
